--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Inside\Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RowSelectedInfo.cs" />
+    <Compile Include="FormsListViewSubItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Settings\Ong.Friendly.FormsStandardControls.Plugin.xml" />
