--- a/Project/Src/Test/TestCode.csproj
+++ b/Project/Src/Test/TestCode.csproj
@@ -51,13 +51,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Codeer.Friendly, Version=1.6.0.0, Culture=neutral, PublicKeyToken=6c44da6fca38aa86, processorArchitecture=MSIL" />
-    <Reference Include="Codeer.Friendly.Windows, Version=1.6.0.0, Culture=neutral, PublicKeyToken=532f270f1da385b3, processorArchitecture=MSIL" />
-    <Reference Include="Codeer.Friendly.Windows.Grasp, Version=1.6.0.0, Culture=neutral, PublicKeyToken=92809a28945fb91d, processorArchitecture=MSIL" />
-    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls, Version=0.9.3.0, Culture=neutral, PublicKeyToken=90759bf0c8b8639e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Codeer\TestAssistant\v1.2.0.0\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
-    </Reference>
+    <Reference Include="Codeer.Friendly, Version=1.7.0.0, Culture=neutral, PublicKeyToken=6c44da6fca38aa86, processorArchitecture=MSIL" />
+    <Reference Include="Codeer.Friendly.Windows, Version=1.7.0.0, Culture=neutral, PublicKeyToken=532f270f1da385b3, processorArchitecture=MSIL" />
+    <Reference Include="Codeer.Friendly.Windows.Grasp, Version=1.7.0.0, Culture=neutral, PublicKeyToken=92809a28945fb91d, processorArchitecture=MSIL" />
+    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls, Version=1.7.0.0, Culture=neutral, PublicKeyToken=90759bf0c8b8639e, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
