ジェネレータコード追加

--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -60,6 +60,19 @@
     <Compile Include="FormsTreeView.cs" />
     <Compile Include="FormsListBox.cs" />
     <Compile Include="FormsRadioButton.cs" />
+    <Compile Include="Generator\FormsButtonGenerator.cs" />
+    <Compile Include="Generator\FormsCheckBoxGenerator.cs" />
+    <Compile Include="Generator\FormsCheckedListBoxGenerator.cs" />
+    <Compile Include="Generator\FormsComboBoxGenerator.cs" />
+    <Compile Include="Generator\FormsListBoxGenerator.cs" />
+    <Compile Include="Generator\FormsNumericUpDownGenerator.cs" />
+    <Compile Include="Generator\FormsRadioButtonGenerator.cs" />
+    <Compile Include="Generator\FormsRichTextBoxGenerator.cs" />
+    <Compile Include="Generator\FormsTabControlGenerator.cs" />
+    <Compile Include="Generator\FormsTextBoxGenerator.cs" />
+    <Compile Include="Generator\FormsToolStripGenerator.cs" />
+    <Compile Include="Generator\FormsTreeViewGenerator.cs" />
+    <Compile Include="Generator\GenerateUtility.cs" />
     <Compile Include="Inside\Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
