--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="RowSelectedInfo.cs" />
     <Compile Include="FormsListViewSubItem.cs" />
+    <Compile Include="Cell.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Settings\Ong.Friendly.FormsStandardControls.Plugin.xml" />
