ドキュメント追加

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ bin/
 Debug/
 DebugUnicode/
 Release/
+!Project/Src/Ong.Forms.StandardControls/bin/
+!Project/Src/Ong.Forms.StandardControls/bin/Release/
+!Project/Src/Ong.Forms.StandardControls/bin/Release/Help/
+!Project/Src/Ong.Forms.StandardControls/bin/Release/doc.shfbproj
+!Project/Src/Ong.Forms.StandardControls/bin/Release/Help/Documentation.chm
