--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -57,7 +57,9 @@
     <Compile Include="FormsButton.cs" />
     <Compile Include="FormsCheckBox.cs" />
     <Compile Include="FormsComboBox.cs" />
+    <Compile Include="FormsLinkLabel.cs" />
     <Compile Include="FormsNumericUpDown.cs" />
+    <Compile Include="FormsProgressBar.cs" />
     <Compile Include="FormsTextBox.cs" />
     <Compile Include="FormsToolStripButton.cs" />
     <Compile Include="FormsToolStripComboBox.cs" />
