--- a/Project/Src/Test/TestCode.csproj
+++ b/Project/Src/Test/TestCode.csproj
@@ -67,6 +67,8 @@
     <Compile Include="BaseTest.cs" />
     <Compile Include="ButtonTest.cs" />
     <Compile Include="CheckBoxTest.cs" />
+    <Compile Include="LinkLabelTest.cs" />
+    <Compile Include="ProgressBarTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TreeViewTest.cs" />
