--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FormsButton.cs" />
     <Compile Include="FormsCheckBox.cs" />
     <Compile Include="FormsComboBox.cs" />
+    <Compile Include="FormsDateTimePicker.cs" />
     <Compile Include="FormsLinkLabel.cs" />
     <Compile Include="FormsNumericUpDown.cs" />
     <Compile Include="FormsProgressBar.cs" />
