Generator実装(DateTimePickerのCloseUpが動かない）

--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -48,8 +48,10 @@
     <Compile Include="FormsComboBoxGenerator.cs" />
     <Compile Include="FormsDataGridViewGenerator.cs" />
     <Compile Include="FormsDateTimePickerGenerator.cs" />
+    <Compile Include="FormsLinkLabelGenerator.cs" />
     <Compile Include="FormsListBoxGenerator.cs" />
     <Compile Include="FormsListViewGenerator.cs" />
+    <Compile Include="FormsMonthCalendarGenerator.cs" />
     <Compile Include="FormsNumericUpDownGenerator.cs" />
     <Compile Include="FormsRadioButtonGenerator.cs" />
     <Compile Include="FormsRichTextBoxGenerator.cs" />
