--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ bin/
 Debug/
 DebugUnicode/
 Release/
+Project/Src/packages
 !Project/Src/Ong.Forms.StandardControls/bin/
 !Project/Src/Ong.Forms.StandardControls/bin/Release/
 !Project/Src/Ong.Forms.StandardControls/bin/Release/Help/
