--- a/Project/Test/FormsTest/FormsTest.csproj
+++ b/Project/Test/FormsTest/FormsTest.csproj
@@ -43,18 +43,18 @@
       <HintPath>packages\Codeer.Friendly.2.1.0\lib\net40\Codeer.Friendly.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="Codeer.Friendly.Windows">
-      <HintPath>packages\Codeer.Friendly.Windows.2.1.0\lib\net20\Codeer.Friendly.Windows.dll</HintPath>
+      <HintPath>packages\Codeer.Friendly.Windows.2.2.0\lib\net20\Codeer.Friendly.Windows.dll</HintPath>
     </Reference>
     <Reference Include="Codeer.Friendly.Windows.Grasp">
-      <HintPath>packages\Codeer.Friendly.Windows.Grasp.2.2.0\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
+      <HintPath>packages\Codeer.Friendly.Windows.Grasp.2.2.1\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
     </Reference>
     <Reference Include="Codeer.Friendly.Windows.NativeStandardControls">
-      <HintPath>packages\Codeer.Friendly.Windows.NativeStandardControls.2.1.1\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
+      <HintPath>packages\Codeer.Friendly.Windows.NativeStandardControls.2.1.2\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Ong.Friendly.FormsStandardControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=ee7fcdb5644bd140, processorArchitecture=MSIL">
+    <Reference Include="Ong.Friendly.FormsStandardControls, Version=2.1.2.0, Culture=neutral, PublicKeyToken=ee7fcdb5644bd140, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Ong.Friendly.FormsStandardControls.2.1.1\lib\net20\Ong.Friendly.FormsStandardControls.dll</HintPath>
+      <HintPath>packages\Ong.Friendly.FormsStandardControls.2.1.2\lib\net20\Ong.Friendly.FormsStandardControls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
@@ -97,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
