--- a/Project/Test/FormsStandardControls/FormsStandardControlsTestForm.csproj
+++ b/Project/Test/FormsStandardControls/FormsStandardControlsTestForm.csproj
@@ -46,6 +46,22 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Codeer.Friendly">
+      <HintPath>..\FormsTest\packages\Codeer.Friendly.2.1.0\lib\net40\Codeer.Friendly.dll</HintPath>
+    </Reference>
+    <Reference Include="Codeer.Friendly.Dynamic">
+      <HintPath>..\FormsTest\packages\Codeer.Friendly.2.1.0\lib\net40\Codeer.Friendly.Dynamic.dll</HintPath>
+    </Reference>
+    <Reference Include="Codeer.Friendly.Windows">
+      <HintPath>..\FormsTest\packages\Codeer.Friendly.Windows.2.2.0\lib\net20\Codeer.Friendly.Windows.dll</HintPath>
+    </Reference>
+    <Reference Include="Codeer.Friendly.Windows.Grasp">
+      <HintPath>..\FormsTest\packages\Codeer.Friendly.Windows.Grasp.2.2.1\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
+    </Reference>
+    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls">
+      <HintPath>..\FormsTest\packages\Codeer.Friendly.Windows.NativeStandardControls.2.1.2\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -77,6 +93,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
