--- a/Project/Test/FormsTest/FormsTest.csproj
+++ b/Project/Test/FormsTest/FormsTest.csproj
@@ -48,7 +48,8 @@
     <Reference Include="Codeer.Friendly.Windows.Grasp">
       <HintPath>packages\Codeer.Friendly.Windows.Grasp.2.2.1\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
     </Reference>
-    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls">
+    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls, Version=2.1.2.0, Culture=neutral, PublicKeyToken=90759bf0c8b8639e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Codeer.Friendly.Windows.NativeStandardControls.2.1.2\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
