--- a/Project/Nuget/Friendly.FormsStandardControls.nuspec
+++ b/Project/Nuget/Friendly.FormsStandardControls.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Ong.Friendly.FormsStandardControls</id>
-    <version>2.2.0</version>
+    <version>2.2.1</version>
     <title>Friendly.FormsStandardControls</title>
     <authors>Onigiri-Soft</authors>
     <owners>Onigiri-Soft</owners>
@@ -11,8 +11,11 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>You will be able to manipulate WinForms Controls. This library is built on Friendly Layer.</description>
     <tags>Friendly Testing Windows WinForms Automation</tags>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="System.Windows.Forms"/>
+    </frameworkAssemblies>
     <dependencies>
-      <dependency id="Codeer.Friendly.Windows.Grasp" version="2.3.0" />
+      <dependency id="Codeer.Friendly.Windows.Grasp" version="2.4.0" />
     </dependencies>
   </metadata>
   <files>
