--- a/Project/Test/FormsTest/FormsTest.csproj
+++ b/Project/Test/FormsTest/FormsTest.csproj
@@ -48,18 +48,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Codeer.Friendly.Windows.2.5.1\lib\net20\Codeer.Friendly.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="Codeer.Friendly.Windows.Grasp, Version=2.4.4.0, Culture=neutral, PublicKeyToken=92809a28945fb91d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Codeer.Friendly.Windows.Grasp.2.4.4\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
+    <Reference Include="Codeer.Friendly.Windows.Grasp">
+      <HintPath>packages\Codeer.Friendly.Windows.Grasp.2.5.0\lib\net20\Codeer.Friendly.Windows.Grasp.dll</HintPath>
     </Reference>
-    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls, Version=2.2.0.0, Culture=neutral, PublicKeyToken=90759bf0c8b8639e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Codeer.Friendly.Windows.NativeStandardControls.2.2.0\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
+    <Reference Include="Codeer.Friendly.Windows.NativeStandardControls">
+      <HintPath>packages\Codeer.Friendly.Windows.NativeStandardControls.2.2.2\lib\net20\Codeer.Friendly.Windows.NativeStandardControls.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Ong.Friendly.FormsStandardControls, Version=2.3.0.0, Culture=neutral, PublicKeyToken=ee7fcdb5644bd140, processorArchitecture=MSIL">
+    <Reference Include="Ong.Friendly.FormsStandardControls, Version=2.3.1.0, Culture=neutral, PublicKeyToken=ee7fcdb5644bd140, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Ong.Friendly.FormsStandardControls.2.3.0\lib\net20\Ong.Friendly.FormsStandardControls.dll</HintPath>
+      <HintPath>packages\Ong.Friendly.FormsStandardControls.2.3.1\lib\net20\Ong.Friendly.FormsStandardControls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
