リストボックス更新とTrackBar追加

--- a/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
+++ b/Project/Src/Ong.Forms.StandardControls/Ong.Friendly.FormsStandardControls.csproj
@@ -87,6 +87,7 @@
     <Compile Include="FormsToolStripButton.cs" />
     <Compile Include="FormsToolStripComboBox.cs" />
     <Compile Include="FormsToolStripTextBox.cs" />
+    <Compile Include="FormsTrackBar.cs" />
     <Compile Include="FormsTreeNode.cs" />
     <Compile Include="FormsTreeView.cs" />
     <Compile Include="FormsListBox.cs" />
