--- a/Project/Nuget/Friendly.FormsStandardControls.nuspec
+++ b/Project/Nuget/Friendly.FormsStandardControls.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Ong.Friendly.FormsStandardControls</id>
-    <version>2.3.2</version>
+    <version>2.4.0</version>
     <title>Friendly.FormsStandardControls</title>
     <authors>Onigiri-Soft</authors>
     <owners>Onigiri-Soft</owners>
@@ -10,7 +10,7 @@
     <projectUrl>http://www.english.codeer.co.jp/test-automation/api-reference/ong-friendly-formsstandardcontrols-dll</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>You will be able to manipulate WinForms Controls. This library is built on Friendly Layer.</description>
-    <tags>Friendly Testing Windows WinForms Automation</tags>
+    <tags>Codeer Friendly Testing Windows WinForms Automation</tags>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Windows.Forms"/>
     </frameworkAssemblies>
