--- a/Project/Nuget/Friendly.FormsStandardControls.nuspec
+++ b/Project/Nuget/Friendly.FormsStandardControls.nuspec
@@ -2,12 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Ong.Friendly.FormsStandardControls</id>
-    <version>2.6.0</version>
+    <version>2.6.1</version>
     <title>Friendly.FormsStandardControls</title>
     <authors>Onigiri-Soft</authors>
     <owners>Onigiri-Soft</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
-    <projectUrl>http://www.english.codeer.co.jp/test-automation/api-reference/ong-friendly-formsstandardcontrols-dll</projectUrl>
+    <projectUrl>https://github.com/ShinichiIshizuka/Ong.Friendly.FormsStandardControls</projectUrl>
+    <iconUrl>https://raw.githubusercontent.com/Codeer-Software/Friendly/master/FriendlyNuget128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>You will be able to manipulate WinForms Controls. This library is built on Friendly Layer.</description>
     <tags>Codeer Friendly Testing Windows WinForms Automation</tags>
@@ -15,7 +16,7 @@
       <frameworkAssembly assemblyName="System.Windows.Forms"/>
     </frameworkAssemblies>
     <dependencies>
-      <dependency id="Codeer.Friendly.Windows.Grasp" version="2.7.0" />
+      <dependency id="Codeer.Friendly.Windows.Grasp" version="2.7.1" />
     </dependencies>
   </metadata>
   <files>
