--- a/Project/Nuget/Friendly.FormsStandardControls.nuspec
+++ b/Project/Nuget/Friendly.FormsStandardControls.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Ong.Friendly.FormsStandardControls</id>
-    <version>2.6.1</version>
+    <version>2.7.0</version>
     <title>Friendly.FormsStandardControls</title>
     <authors>Onigiri-Soft</authors>
     <owners>Onigiri-Soft</owners>
@@ -17,6 +17,7 @@
     </frameworkAssemblies>
     <dependencies>
       <dependency id="Codeer.Friendly.Windows.Grasp" version="2.7.1" />
+      <dependency id="Codeer.TestAssistant.GeneratorToolKit" version="2.0.0" />
     </dependencies>
   </metadata>
   <files>
@@ -24,5 +25,7 @@
     <file src="..\Src\ReleaseBinary\Ong.Friendly.FormsStandardControls.xml" target="lib\net20" />
     <file src="..\Src\ReleaseBinary\ja\Ong.Friendly.FormsStandardControls.xml" target="lib\net20\ja" />
     <file src="..\Src\ReleaseBinary\ja\Ong.Friendly.FormsStandardControls.resources.dll" target="lib\net20\ja" />
+    <file src="..\Src\ReleaseBinary\Ong.Friendly.FormsStandardControls.Generator.dll" target="lib\net20" />
+    <file src="..\Src\ReleaseBinary\Ong.Friendly.FormsStandardControls.Generator.xml" target="lib\net20" />
   </files>
 </package>
