--- a/Project/Test/FormsTest/app.config
+++ b/Project/Test/FormsTest/app.config
@@ -18,6 +18,10 @@
         <assemblyIdentity name="Codeer.Friendly.Windows.Grasp.2.0" publicKeyToken="92809a28945fb91d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.8.1.0" newVersion="2.8.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Codeer.TestAssistant.GeneratorToolKit" publicKeyToken="f7af39ab9bcf13fe" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
