Generator function added.

--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateDriver\AnalyzeMenu.cs" />
     <Compile Include="CreateDriver\CollectionUtility.cs" />
     <Compile Include="CreateDriver\ControlAndFieldName.cs" />
     <Compile Include="CreateDriver\DriverCreatorUtils.cs" />
@@ -66,7 +67,6 @@
     <Compile Include="CreateDriver\ReflectionAccessor.cs" />
     <Compile Include="CreateDriver\WindowUtilityInTarget.cs" />
     <Compile Include="CreateDriver\WinFormsDriverCreator.cs" />
-    <Compile Include="CreateDriver\CreateMenu.cs" />
     <Compile Include="FormsButtonGenerator.cs" />
     <Compile Include="FormsCheckBoxGenerator.cs" />
     <Compile Include="FormsCheckedListBoxGenerator.cs" />
