--- a/Project/Test/FormsTest/packages.config
+++ b/Project/Test/FormsTest/packages.config
@@ -3,7 +3,8 @@
   <package id="Codeer.Friendly" version="2.6.1" targetFramework="net40" />
   <package id="Codeer.Friendly.Windows" version="2.15.0" targetFramework="net40" />
   <package id="Codeer.Friendly.Windows.Grasp" version="2.12.0" targetFramework="net40" />
-  <package id="Codeer.Friendly.Windows.NativeStandardControls" version="2.12.17" targetFramework="net40" />
-  <package id="Codeer.TestAssistant.GeneratorToolKit" version="3.4.4" targetFramework="net40" />
-  <package id="Ong.Friendly.FormsStandardControls" version="2.12.11" targetFramework="net40" />
+  <package id="Codeer.Friendly.Windows.KeyMouse" version="1.3.14" targetFramework="net40" />
+  <package id="Codeer.Friendly.Windows.NativeStandardControls" version="2.12.20" targetFramework="net40" />
+  <package id="Codeer.TestAssistant.GeneratorToolKit" version="3.5.2" targetFramework="net40" />
+  <package id="Ong.Friendly.FormsStandardControls" version="2.13.6" targetFramework="net40" />
 </packages>
